20240930_daily_arxiv_update

--- a/arxiv/2024_09_arxiv.html
+++ b/arxiv/2024_09_arxiv.html
@@ -109,6 +109,93 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03435">https://arxiv.org/abs/2311.03435</a></span> Signatures of hidden octupolar order from nonlinear Hall effects (Sopheak Sorn, Adarsh S. Patri)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07597">https://arxiv.org/abs/2409.07597</a></span> Introduction to Bell’s inequality in Quantum Mechanics *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2401.10165">https://arxiv.org/abs/2401.10165</a></span> Anomalies and gauging of U(1) symmetries</p>
+<br>
+<p class="p1">20240916</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.08545">https://arxiv.org/abs/2409.08545</a></span> Simulating a quasiparticle on a quantum device (Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.08327">https://arxiv.org/abs/2409.08327</a></span> Spinon spin current (Leon Balents, Oleg A. Starykh)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.08866">https://arxiv.org/abs/2409.08866</a></span> Topological gauge theory of vortices in type-III superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.08329">https://arxiv.org/abs/2409.08329</a></span> Optical signatures of interlayer electron coherence in a bilayer semiconductor (Hongkun Park, Eugene Demler, Philip Kim, Mikhail D. Lukin)</p>
+<p class="p2"><br></p>
+<p class="p1">20240917</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.10507">https://arxiv.org/abs/2409.10507</a></span> Beth-Uhlenbeck equation for the thermodynamics of fluctuations in a generalised 2+1D Gross-Neveu model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.09112">https://arxiv.org/abs/2409.09112</a></span> Universal thermalization dynamics in (1+1)d QFTs **** (Richard A. Davison, Luca V. Delacr ́etaz)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.09232">https://arxiv.org/abs/2409.09232</a></span> What is Entropy? ***** (John C. Baez)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.09395">https://arxiv.org/abs/2409.09395</a></span> Macroscopic thermalization by unitary time-evolution in the weakly perturbed two-dimensional Ising model — An application of the Roos-Teufel-Tumulka- Vogel theorem (Hal Tasaki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.05730">https://arxiv.org/abs/2308.05730</a></span> Emergent generalized symmetries in ordered phases and applications to quantum disordering (Salvatore D. Pace)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.03445">https://arxiv.org/abs/2311.03445</a></span> Theory of quantum anomalous Hall phases in pentalayer rhombohedral graphene moir ́e structures (Zhihuan Dong, Adarsh S. Patri, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.09211">https://arxiv.org/abs/2409.09211</a></span> Cambridge Lectures on The Standard Model *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.09252">https://arxiv.org/abs/2409.09252</a></span> Fixed Points of Quantum Gravity from Dimensional Regularisation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.10003">https://arxiv.org/abs/2409.10003</a></span> The Quantum Gravity Scale and the Swampland</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.10113">https://arxiv.org/abs/2409.10113</a></span> Off-diagonal coupling of supersymmetric SYK model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.09564">https://arxiv.org/abs/2408.09564</a></span> 31 Lectures in Geometric Mechanics *****</p>
+<p class="p2"><br></p>
+<p class="p1">20240918</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.10614">https://arxiv.org/abs/2409.10614</a></span> Immortal quantum correlation in quasiperiodic quasi-1D system (Junmo Jeon, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.11773">https://arxiv.org/abs/2409.11773</a></span> Four loop elasticity renormalization of low temperature flat polymerized membranes *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.12220">https://arxiv.org/abs/2409.12220</a></span> Quantized axial charge of staggered fermions and the chiral anomaly (Arkya Chatterjee, Salvatore D. Pace, Shu-Heng Shao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.12230">https://arxiv.org/abs/2409.12230</a></span> Stability and Loop Models from Decohering Non-Abelian Topological Order (Pablo Sala, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.12639">https://arxiv.org/abs/2409.12639</a></span> Any Quantum Many-Body State under Local Dissipation will be Disentangled in Finite Time (Zongping Gong, Yuto Ashida)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.10712">https://arxiv.org/abs/2409.10712</a></span> Unconventional superconductivity in altermagnets with spin-orbit coupling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.10886">https://arxiv.org/abs/2409.10886</a></span> Three lectures on Fourier analysis and learning theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.10612">https://arxiv.org/abs/2409.10612</a></span> Duality-preserving deformation of 3+1d lattice Z2 gauge theory with exact gapped ground states</p>
+<p class="p2"><br></p>
+<p class="p1">20240919</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.12120">https://arxiv.org/abs/2409.12120</a></span> Computing the Z2 Invariant in Two-Dimensional Strongly-Correlated Systems (Barry Bradlyn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.11551">https://arxiv.org/abs/2409.11551</a></span> SYK-Schur duality: Double scaled SYK correlators from N = 2 supersymmetric gauge theory **** (Herman Verlinde)</p>
+<p class="p2"><br></p>
+<p class="p1">20240920</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.12948">https://arxiv.org/abs/2409.12948</a></span> Decoherence and wavefunction deformation of D4 non-Abelian topological order (Pablo Sala, Jason Alicea, Ruben Verresen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.12451">https://arxiv.org/abs/2409.12451</a></span> Vacuum and Vortices in Inhomogeneous Abelian Higgs Model</p>
+<p class="p2"><br></p>
+<p class="p1">20240923</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.13215">https://arxiv.org/abs/2409.13215</a></span> Gauge invariant quantum transport theory for non-Hermitian systems ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.13408">https://arxiv.org/abs/2409.13408</a></span> Quantum geometry in condensed matter ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.13679">https://arxiv.org/abs/2409.13679</a></span> Physics-informed renormalisation group flows ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.13377">https://arxiv.org/abs/2409.13377</a></span> Field theories and quantum methods for stochastic reaction-diffusion systems *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.09859">https://arxiv.org/abs/2312.09859</a></span> Path integral for the quartic oscillator: An accurate analytic formula for the partition function ***</p>
+<p class="p2"><br></p>
+<p class="p1">20240924</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.13829">https://arxiv.org/abs/2409.13829</a></span> Chiral and topological superconductivity in isospin polarized multilayer graphene (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.13808">https://arxiv.org/abs/2409.13808</a></span> Gravity as a mesoscopic system (Herman Verlinde)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.15123">https://arxiv.org/abs/2409.15123</a></span> The geometric phase transition of the three-dimensional Z2 lattice gauge model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.15266">https://arxiv.org/abs/2409.15266</a></span> Making s-wave superconductors topological with magnetic field (Liang Fu, Leonid I. Glazman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.15082">https://arxiv.org/abs/2409.15082</a></span> Quantum phase diagrams of Dicke-Ising models by a wormhole algorithm</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.15193">https://arxiv.org/abs/2409.15193</a></span> Fractonic Coset Construction for Spontaneously Broken Translations ****</p>
+<p class="p2"><br></p>
+<p class="p1">20240925</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.15583">https://arxiv.org/abs/2409.15583</a></span> Quantum entanglement and quantum geometry measured with inelastic X-ray scattering (Barry Bradlyn, Peter Abbamonte)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.15851">https://arxiv.org/abs/2409.15851</a></span> Space-time Electric Translations (Kun Yang, Congjun Wu)</p>
+<p class="p2"><br></p>
+<p class="p1">20240926</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.16398">https://arxiv.org/abs/2409.16398</a></span> shot noise in a phenomenological model of a marginal Fermi liquid (S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.16346">https://arxiv.org/abs/2409.16346</a></span> Scalable quantum dynamics compilation via quantum machine learning (Yuxuan Zhang, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.16790">https://arxiv.org/abs/2409.16790</a></span> Lectures on scattering theory in partial-wave amplitudes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.16553">https://arxiv.org/abs/2409.16553</a></span> Simulating black hole quantum dynamics on an optical lattice using the complex Sachdev-Ye-Kitaev model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.16368">https://arxiv.org/abs/2409.16368</a></span> The multimode nature of spacetime entanglement in QFT ****</p>
+<p class="p2"><br></p>
+<p class="p1">20240927</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17530">https://arxiv.org/abs/2409.17530</a></span> Strong-to-weak spontaneous breaking of 1-form symmetry and intrinsically mixed topological order ***** (Carolyn Zhang, Yichen Xu, Jian-Hao Zhang, Cenke Xu, Zhen Bi, Zhu-Xi Luo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17599">https://arxiv.org/abs/2409.17599</a></span> Information thermodynamics: from physics to neuroscience</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17230">https://arxiv.org/abs/2409.17230</a></span> Detecting axion dynamics on the surface of magnetic topological insulators *** (Zhi-Qiang Gao, Taige Wang, Michael P. Zaletel, Dung-Hai Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17219">https://arxiv.org/abs/2409.17219</a></span> Fermionic parton theory of Rydberg Z2 quantum spin liquids</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17245">https://arxiv.org/abs/2409.17245</a></span> Einstein-de Haas effect: a bridge linking mechanics, magnetism, and topology</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17142">https://arxiv.org/abs/2409.17142</a></span> Visualizing Dynamics of Charges and Strings in (2+1)D Lattice Gauge Theories *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17913">https://arxiv.org/abs/2409.17913</a></span> Symmetry Enhancement, SPT Absorption, and Duality in QED3</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18113">https://arxiv.org/abs/2409.18113</a></span> (SPT-)LSM theorems from projective non-invertible symmetries ***** (Salvatore D. Pace, Ho Tat Lam, O ̈mer M. Aksoy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.17240">https://arxiv.org/abs/2409.17240</a></span> Optical conductivity of the Majorana mode at the s- and d-wave topological superconductor edge (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18067">https://arxiv.org/abs/2409.18067</a></span> Topological chiral superconductivity ***** (Minho Kim, Abigail Timmel, Long Ju, Xiao-Gang Wen)</p>
+<p class="p2"><br></p>
+<p class="p1">20240930</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18176">https://arxiv.org/abs/2409.18176</a></span> Tuning transport in solid-state Bose-Fermi mixtures by Feshbach resonances (Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18630">https://arxiv.org/abs/2409.18630</a></span> Entropy, concentration, and learning: a statistical mechanics primer ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18323">https://arxiv.org/abs/2409.18323</a></span> The dual Ginzburg-Landau theory for a holographic superconductor: Finite coupling corrections</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18944">https://arxiv.org/abs/2409.18944</a></span> Fluctuation-Dissipation Theorem and Information Geometry in Open Quantum Systems ***** (Jian-Hao Zhang, Cenke Xu, Yichen Xu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18206">https://arxiv.org/abs/2409.18206</a></span> Entanglement renormalization of fractonic anisotropic ZN Laplacian models *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18810">https://arxiv.org/abs/2409.18810</a></span> Classification of mass terms in kagome semimetals *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18934">https://arxiv.org/abs/2409.18934</a></span> Two-dimensional Stoner transitions beyond mean-field ***** (Zachary M. Raines, Andrey V. Chubukov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2309.15118">https://arxiv.org/abs/2309.15118</a></span> Classification of symmetry-enriched topological quantum spin liquids ***** (Weicheng Ye, Liujun Zou)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.18656">https://arxiv.org/abs/2409.18656</a></span> N = 8 Supergravity, and beyond ***** (Hermann Nicolai)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2404.09122">https://arxiv.org/abs/2404.09122</a></span> Monotonicity of RG flow in emergent dual holography of worldsheet nonlinear σ model ***** (Ki-Seok Kim, Arpita Mitra, Debangshu Mukherjee, Shinsei Ryu)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
