20241006_daily_arxiv_update

--- a/arxiv/2024_10_arxiv.html
+++ b/arxiv/2024_10_arxiv.html
@@ -44,6 +44,25 @@
 <a href="http://www.kaist.ac.kr/">Korea Advanced Institute of Science and Technology (KAIST)</a></span></div>-->
 <br>
 <p class="p1">20241001</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.20456">https://arxiv.org/abs/2409.20456</a></span> Altermagnetism Classification (Sang-Wook Cheong)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.19164">https://arxiv.org/abs/2409.19164</a></span> More About the Lattice Hamiltonian for Adjoint QCD2</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.20538">https://arxiv.org/abs/2409.20538</a></span> Quantum Annealing with chaotic driver Hamiltonians *** (Henning Schlömer, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.20567">https://arxiv.org/abs/2409.20567</a></span> Doping a fractional quantum anomalous Hall insulator *** (Zhengyan Darius Shi, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2312.12058">https://arxiv.org/abs/2312.12058</a></span> Quantum field theories of relativistic Luttinger fermions ****</p>
+<p class="p2"><br></p>
+<p class="p1">20241002</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.00087">https://arxiv.org/abs/2410.00087</a></span> A new series of 3D CFTs with Sp(N) global symmetry on fuzzy sphere<span class="Apple-converted-space">  </span>(Yin-Chen He)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.00092">https://arxiv.org/abs/2410.00092</a></span> Bionic fractionalization in the trimer model of twisted bilayer graphene *** (Eun-Ah Kim)</p>
+<p class="p2"><br></p>
+<p class="p1">20241003</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.01397">https://arxiv.org/abs/2410.01397</a></span> Covariant interacting fractons</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.01094">https://arxiv.org/abs/2410.01094</a></span> Topological orders with classical Lie group symmetries from coupling electron wires **** (Jeffrey C.Y. Teo)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.01759">https://arxiv.org/abs/2410.01759</a></span> Topological ground state degeneracy of the two-channel Kondo lattice (Yashar Komijani)</p>
+<p class="p2"><br></p>
+<p class="p1">20241004</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.02689">https://arxiv.org/abs/2410.02689</a></span> Quantum Restored Symmetry Protected Topological Phases (Elio J. K ̈onig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.02171">https://arxiv.org/abs/2410.02171</a></span> Topological superconductivity in a spin-orbit coupled Kondo lattice *** (Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10754">https://arxiv.org/abs/2208.10754</a></span> Nonsymmorphic spin-space cubic groups and SU(2)1 conformal invariance in one-dimensional spin-1/2 models (Ian Affleck)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
