20241011_daily_arxiv_update

--- a/arxiv/2024_10_arxiv.html
+++ b/arxiv/2024_10_arxiv.html
@@ -63,6 +63,44 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.02689">https://arxiv.org/abs/2410.02689</a></span> Quantum Restored Symmetry Protected Topological Phases (Elio J. K ̈onig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.02171">https://arxiv.org/abs/2410.02171</a></span> Topological superconductivity in a spin-orbit coupled Kondo lattice *** (Piers Coleman)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.10754">https://arxiv.org/abs/2208.10754</a></span> Nonsymmorphic spin-space cubic groups and SU(2)1 conformal invariance in one-dimensional spin-1/2 models (Ian Affleck)</p>
+<br>
+<p class="p1">20241007</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.02985">https://arxiv.org/abs/2410.02985</a></span> Global and Local Topological Crystalline Markers for Rotation-Symmetric Insulators *** (Yoonseok Hwang, Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.03526">https://arxiv.org/abs/2410.03526</a></span> The phases of three-dimensional d-wave superconductors with two attractive interactions *** (Majid Kheirkhah, Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.03607">https://arxiv.org/abs/2410.03607</a></span> Crystallography, Group Cohomology, and Lieb–Schultz–Mattis Constraints (Chunxiao Liu, Weicheng Ye)</p>
+<p class="p2"><br></p>
+<p class="p1">20241008</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.03821">https://arxiv.org/abs/2410.03821</a></span> Electric polarization and discrete shift from boundary and corner charge in crystalline Chern insulators (Yuxuan Zhang, Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.03888">https://arxiv.org/abs/2410.03888</a></span> Designing (higher) Hall crystals (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.04021">https://arxiv.org/abs/2410.04021</a></span> Unconventional topological phase transition of the Hopf insulator (Sunje Kim, Ysun Choi, Hyeongmuk Lim, Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05181">https://arxiv.org/abs/2410.05181</a></span> Optimal Conversion from Classical to Quantum Randomness via Quantum Chaos (John Preskill)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05028">https://arxiv.org/abs/2410.05028</a></span> Anisotropic conductivity for the type-I and type-II phases of Weyl/multi-Weyl semimetals in planar Hall set-ups (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05059">https://arxiv.org/abs/2410.05059</a></span> Manipulating topology of quantum phase transitions by symmetry enhancement (Fakher F. Assaad)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.18782">https://arxiv.org/abs/2311.18782</a></span> Duality and Stacking of Bosonic and Fermionic SPT Phases (Minyoung You)</p>
+<p class="p2"><br></p>
+<p class="p1">20241010</p>
+<p class="p3"><a href="https://arxiv.org/abs/2410.07029">https://arxiv.org/abs/2410.07029</a><span class="s2"> Geometric Floquet theory</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05400">https://arxiv.org/abs/2410.05400</a></span> Separable ellipsoids around multipartite states (William Witczak-Krempa, Achim Kempf)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.06896">https://arxiv.org/abs/2410.06896</a></span> Failure of the large-N expansion in a bosonic tensor model *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05823">https://arxiv.org/abs/2410.05823</a></span> Three-dimensional Abelian and nonAbelian gauge Higgs theories (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05387">https://arxiv.org/abs/2410.05387</a></span> Valley polarization, magnetization, and superconductivity in bilayer graphene near the van Hove singularity (Heqiu Li, Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.06557">https://arxiv.org/abs/2410.06557</a></span> Observation of disorder-free localization and efficient disorder averaging on a quantum processor (Google Quantum AI and Collaborators)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.06659">https://arxiv.org/abs/2410.06659</a></span> Bose metals, from prediction to realization</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05384">https://arxiv.org/abs/2410.05384</a></span> Chiral superconductivity from parent Chern band and its non-Abelian generalization</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05365">https://arxiv.org/abs/2410.05365</a></span> Strange metals and planckian transport in a gapless phase from spatially random interactions ***** (Aavishkar A. Patel, Peter Lunts, Michael S. Albergo)</p>
+<p class="p2"><br></p>
+<p class="p1">20241011</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07317">https://arxiv.org/abs/2410.07317</a></span> Field theory of monitored, interacting fermion dynamics with charge conservation ***** (Haoyu Guo, Matthew S. Foster, Chao-Ming Jian, Andreas W. W. Ludwig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07334">https://arxiv.org/abs/2410.07334</a></span> Measurement-induced transitions for interacting fermions ***** (Alexander D. Mirlin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.08079">https://arxiv.org/abs/2410.08079</a></span> Field theory for monitored Brownian SYK clusters *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07640">https://arxiv.org/abs/2410.07640</a></span> Phases and Phase Transitions of the Disordered Quantum Clock Model ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07853">https://arxiv.org/abs/2410.07853</a></span> Meissner effect in non-Hermitian superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07326">https://arxiv.org/abs/2410.07326</a></span> Emergent Fracton Hydrodynamics in the Fractional Quantum Hall Regime of Ultracold Atoms (Frank Pollmann, Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07321">https://arxiv.org/abs/2410.07321</a></span> Exact analytic toolbox for quantum dynamics with tunable noise strength (Mert Okyay, Oliver Hart, Rahul Nandkishore, Aaron J. Friedman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07235">https://arxiv.org/abs/2410.07235</a></span> Michael Ellis Fisher – CV and achievements</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07319">https://arxiv.org/abs/2410.07319</a></span> Single-particle spectral function of fractional quantum anomalous Hall states (Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07929">https://arxiv.org/abs/2410.07929</a></span> Three-point functions from a Schwinger-Keldysh effective action, resummed in derivatives ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.08205">https://arxiv.org/abs/2410.08205</a></span> Holographic View of Mixed-State Symmetry-Protected Topological Phases in Open Quantum Systems ***** (Shijun Sun, Jian-Hao Zhang, Zhen Bi, Yizhi You)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
