--- a/arxiv/2024_10_arxiv.html
+++ b/arxiv/2024_10_arxiv.html
@@ -79,7 +79,7 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2311.18782">https://arxiv.org/abs/2311.18782</a></span> Duality and Stacking of Bosonic and Fermionic SPT Phases (Minyoung You)</p>
 <p class="p2"><br></p>
 <p class="p1">20241010</p>
-<p class="p3"><a href="https://arxiv.org/abs/2410.07029">https://arxiv.org/abs/2410.07029</a><span class="s2"> Geometric Floquet theory</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07029">https://arxiv.org/abs/2410.07029</a></span> Geometric Floquet theory</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05400">https://arxiv.org/abs/2410.05400</a></span> Separable ellipsoids around multipartite states (William Witczak-Krempa, Achim Kempf)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.06896">https://arxiv.org/abs/2410.06896</a></span> Failure of the large-N expansion in a bosonic tensor model *****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.05823">https://arxiv.org/abs/2410.05823</a></span> Three-dimensional Abelian and nonAbelian gauge Higgs theories (Ettore Vicari)</p>
@@ -101,6 +101,46 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07319">https://arxiv.org/abs/2410.07319</a></span> Single-particle spectral function of fractional quantum anomalous Hall states (Michael Knap)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07929">https://arxiv.org/abs/2410.07929</a></span> Three-point functions from a Schwinger-Keldysh effective action, resummed in derivatives ****</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.08205">https://arxiv.org/abs/2410.08205</a></span> Holographic View of Mixed-State Symmetry-Protected Topological Phases in Open Quantum Systems ***** (Shijun Sun, Jian-Hao Zhang, Zhen Bi, Yizhi You)</p>
+<br>
+<p class="p1">20241014</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.08264">https://arxiv.org/abs/2410.08264</a></span> Towards absolutely stable ergodicity breaking in two and three dimensions **** (Charles Stahl, Oliver Hart, Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.08284">https://arxiv.org/abs/2410.08284</a></span> Multi wavefunction overlap and multi entropy for topological ground states in (2+1) dimensions (Bowei Liu, Junjia Zhang, Shuhei Ohyama, Yuya Kusuki, Shinsei Ryu)</p>
+<p class="p2"><br></p>
+<p class="p1">20241015</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.09148">https://arxiv.org/abs/2410.09148</a></span> Unconventional superconductivity mediated by exciton density wave fluctuations ***** (Ajesh Kumar, Adarsh S. Patri, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.09145">https://arxiv.org/abs/2410.09145</a></span> The Ultra-critical Floquet Non-Fermi Liquid ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.10090">https://arxiv.org/abs/2410.10090</a></span> Sudden change in entanglement Hamiltonian: Phase diagram of an Ising entanglement Hamiltonian *** (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.10038">https://arxiv.org/abs/2410.10038</a></span> Quantum-criticality and superconductivity in twisted transition metal di-chalcogenides ***** (A.V. Chubukov, C. M. Varma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.09611">https://arxiv.org/abs/2410.09611</a></span> Quantum field theory and the electroweak Standard Model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2406.01681">https://arxiv.org/abs/2406.01681</a></span> Gross-Neveu-Yukawa theory of SO(2N)<span class="s2">→</span>SO(N)×SO(N) spontaneous symmetry breaking ****** (SangEun Han, Igor F. Herbut)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.07597">https://arxiv.org/abs/2409.07597</a></span> Introduction to Bell’s inequality in Quantum Mechanics</p>
+<p class="p2"><br></p>
+<p class="p1">20241016</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.09353">https://arxiv.org/abs/2410.09353</a></span> Observable Measurement-Induced Transitions ***** (Lev B. Ioffe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.11822">https://arxiv.org/abs/2410.11822</a></span> Entanglement Oscillations from Many-Body Quantum Scars ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.11678">https://arxiv.org/abs/2410.11678</a></span> Strings as Hyper-Fractons *** (Hyungrok Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.11602">https://arxiv.org/abs/2410.11602</a></span> Preparing topological states with finite depth simultaneous commuting gates **** (Erez Berg, Ady Stern)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.10949">https://arxiv.org/abs/2410.10949</a></span> Fractionalized Altermagnets: from neighboring and altermagnetic spin-liquids to fractionalized spin-orbit coupling **** (Subrata Mandal, Mathias S. Scheurer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.11083">https://arxiv.org/abs/2410.11083</a></span> Review of honeycomb-based Kitaev materials with zigzag magnetic ordering</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.11757">https://arxiv.org/abs/2410.11757</a></span> FROM FEYNMAN DIAGRAMS TO THE AMPLITUHEDRON: A GENTLE REVIEW</p>
+<p class="p2"><br></p>
+<p class="p1">20241017</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12364">https://arxiv.org/abs/2410.12364</a></span> AN INFORMAL INTRODUCTION TO THE PARISI FORMULA ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12482">https://arxiv.org/abs/2410.12482</a></span> Electronic glasses from a broken gauge symmetry in disorder-free systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12430">https://arxiv.org/abs/2410.12430</a></span> Renormalization-Group Analysis of the Many-Body Localization Transition in the Random-Field XXZ Chain ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.11909">https://arxiv.org/abs/2410.11909</a></span> Stop using Landau gauge for Tight-binding Models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12354">https://arxiv.org/abs/2410.12354</a></span> Intersublattice entanglement entropy of ferrimagnetic spin chains (Se Kwon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.11942">https://arxiv.org/abs/2410.11942</a></span> Operator algebra and algorithmic construction of boundaries and defects in (2+1)D topological Pauli stabilizer codes *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12789">https://arxiv.org/abs/2410.12789</a></span> Altermagnetic Instabilities from Quantum Geometry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2408.11905">https://arxiv.org/abs/2408.11905</a></span> A theory of time based on wavefunction collapse **** (Sung-Sik Lee)</p>
+<p class="p2"><br></p>
+<p class="p1">20241018</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.13547">https://arxiv.org/abs/2410.13547</a></span> Topological Quantum Computing ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12935">https://arxiv.org/abs/2410.12935</a></span> Quantum Boltzmann machine learning of ground-state energies (Mark M. Wilde)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.13734">https://arxiv.org/abs/2410.13734</a></span> Strong-to-weak spontaneous symmetry breaking meets average symmetry-protected topological order</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.13354">https://arxiv.org/abs/2410.13354</a></span> Emergent spacetime supersymmetry in an interacting Kitaev chain with explicit supersymmetry</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12900">https://arxiv.org/abs/2410.12900</a></span> Instability of steady-state mixed-state symmetry-protected topological order to strong-to-weak spontaneous symmetry breaking</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12919">https://arxiv.org/abs/2410.12919</a></span> Giant Dynamical Paramagnetism in the driven pseudogap phase of YBa2Cu3O6+x (Eugene A. Demler, Patrick A. Lee)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
