20241027_daily_arxiv_update

--- a/arxiv/2024_10_arxiv.html
+++ b/arxiv/2024_10_arxiv.html
@@ -141,6 +141,49 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.13354">https://arxiv.org/abs/2410.13354</a></span> Emergent spacetime supersymmetry in an interacting Kitaev chain with explicit supersymmetry</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12900">https://arxiv.org/abs/2410.12900</a></span> Instability of steady-state mixed-state symmetry-protected topological order to strong-to-weak spontaneous symmetry breaking</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12919">https://arxiv.org/abs/2410.12919</a></span> Giant Dynamical Paramagnetism in the driven pseudogap phase of YBa2Cu3O6+x (Eugene A. Demler, Patrick A. Lee)</p>
+<br>
+<p class="p1">20241021</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.14552">https://arxiv.org/abs/2410.14552</a></span> Saddles-to-minima topological crossover and glassiness in the Rubik’s Cube (Oliver Hart, Claudio Castelnov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.14036">https://arxiv.org/abs/2410.14036</a></span> Fractional quantum Hall effect in higher dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.14338">https://arxiv.org/abs/2410.14338</a></span> Even-odd effect in multilayer Kitaev honeycomb magnets</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.14583">https://arxiv.org/abs/2410.14583</a></span> Hidden Kondo lattice physics in single-orbital Hubbard models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.07000">https://arxiv.org/abs/2410.07000</a></span> Classification of Higher-Order Van Hove Singularities in Kagome Topological Bands</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.12043">https://arxiv.org/abs/2410.12043</a></span> Optimizing Beer Glass Shapes to Minimize Heat Transfer – New Results</p>
+<p class="p2"><br></p>
+<p class="p1">20241022</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.15395">https://arxiv.org/abs/2410.15395</a></span> Floquet-Enriched Nontrivial Topology at Quantum Criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16174">https://arxiv.org/abs/2410.16174</a></span> Observation of anomalous information scrambling in a Rydberg atom array</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.15754">https://arxiv.org/abs/2410.15754</a></span> Honeycomb supersolid – Dirac points and shear-instability induced crystal transitions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.14860">https://arxiv.org/abs/2410.14860</a></span> Universal quantum computation using Ising anyons from a non-semisimple Topological Quantum Field Theory ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16003">https://arxiv.org/abs/2410.16003</a></span> Microscopic theory of spin friction and dissipative spin dynamics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.14909">https://arxiv.org/abs/2410.14909</a></span> Electronic and magnetic properties of LaCuxSb2 tuned by Cu occupancy (Suyoung Kim, Eundeok Mun)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.15422">https://arxiv.org/abs/2410.15422</a></span> Kondo Compensation in a Pseudogap Phase: a Renormalization Group Study ***** (Gergely Zar ́and)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2401.11027">https://arxiv.org/abs/2401.11027</a></span> FOREWORD TO THE SECOND EDITION OF “THE SUPERSYMMETRIC WORLD” ***** (M. SHIFMAN)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.15773">https://arxiv.org/abs/2410.15773</a></span> Lagrangian 1-form structure of Calogero-Moser type systems</p>
+<p class="p2"><br></p>
+<p class="p1">20241023</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16375">https://arxiv.org/abs/2410.16375</a></span> Interplay of Quantum and Thermal Fluctuations in Two-Dimensional Randomly Pinned Charge Density Waves **** (Eduardo Fradkin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16402">https://arxiv.org/abs/2410.16402</a></span> Universal time evolution of string order parameter in quantum critical systems with boundary invertible or non-invertible symmetry breaking *** (Xueda Wen)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16582">https://arxiv.org/abs/2410.16582</a></span> A Lindbladian for exact renormalization of density operators in QFT ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16532">https://arxiv.org/abs/2410.16532</a></span> Undecidability in Physics: a Review</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16558">https://arxiv.org/abs/2410.16558</a></span> Observation of string breaking on a (2 + 1)D Rydberg quantum simulator (Mikhail D. Lukin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16352">https://arxiv.org/abs/2410.16352</a></span> Is the low-energy optical absorption in correlated insulators controlled by quantum geometry? (Debanjan Chowdhury)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16376">https://arxiv.org/abs/2410.16376</a></span> Stability of algebraic spin liquids coupled to quantum phonons (Urban F. P. Seifert, Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16891">https://arxiv.org/abs/2410.16891</a></span> Alternative theory for the quantum black hole and the temperature of its quantum radiation (Gerard ’t Hooft)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16599">https://arxiv.org/abs/2410.16599</a></span> Entanglement in algebraic quantum field theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.16250">https://arxiv.org/abs/2410.16250</a></span> Cups and Gates I: Cohomology invariants and logical quantum operations</p>
+<p class="p2"><br></p>
+<p class="p1">20241024</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.17562">https://arxiv.org/abs/2410.17562</a></span> Universal Entanglement Revival of Topological Origin (Mahn-Soo Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.17317">https://arxiv.org/abs/2410.17317</a></span> Duality defect in a deformed transverse-field Ising model (Aditi Mitra)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.17720">https://arxiv.org/abs/2410.17720</a></span> Fragile spin liquid in three dimensions (Owen Benton)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.17314">https://arxiv.org/abs/2410.17314</a></span> Topological excitations at time vortices in periodically driven systems (Erez Berg)</p>
+<p class="p2"><br></p>
+<p class="p1">20241025</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.18616">https://arxiv.org/abs/2410.18616</a></span> Topological Order in the Spectral Riemann Surfaces of Non-Hermitian Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.18679">https://arxiv.org/abs/2410.18679</a></span> A gauge-invariant formulation of optical responses in superconductors (Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.18175">https://arxiv.org/abs/2410.18175</a></span> Anyon Superconductivity from Topological Criticality in a Hofstadter-Hubbard Model (Stefan Divic, Valentin Cr ́epel, Tomohiro Soejima, Xue-Yang Song, Andrew Millis, Michael P. Zaletel, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.18854">https://arxiv.org/abs/2410.18854</a></span> Preempting Fermion Sign Problem: Unveiling Quantum Criticality through Nonequilibrium Dynamics</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
