--- a/arxiv/2024_10_arxiv.html
+++ b/arxiv/2024_10_arxiv.html
@@ -184,6 +184,39 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.18679">https://arxiv.org/abs/2410.18679</a></span> A gauge-invariant formulation of optical responses in superconductors (Haruki Watanabe)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.18175">https://arxiv.org/abs/2410.18175</a></span> Anyon Superconductivity from Topological Criticality in a Hofstadter-Hubbard Model (Stefan Divic, Valentin Cr ́epel, Tomohiro Soejima, Xue-Yang Song, Andrew Millis, Michael P. Zaletel, Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.18854">https://arxiv.org/abs/2410.18854</a></span> Preempting Fermion Sign Problem: Unveiling Quantum Criticality through Nonequilibrium Dynamics</p>
+<br>
+<p class="p1">20241028</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.19095">https://arxiv.org/abs/2410.19095</a></span> A generalized framework for straintronics in 2D quantum materials using group theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.19337">https://arxiv.org/abs/2410.19337</a></span> Intrinsic Nernst effect of the magnon orbital moment in a honeycomb ferromagnet (Se Kwon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.19040">https://arxiv.org/abs/2410.19040</a></span> A Gapless Phase with Haagerup Symmetry (Sakura Sch ̈afer-Nameki)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.19683">https://arxiv.org/abs/2410.19683</a></span> Schwinger-Dyson Resummation of Perturbation Expansions (Tom Banks)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.19126">https://arxiv.org/abs/2410.19126</a></span> Exactly solvable models for fermionic symmetry-enriched topological phases and fermionic ’t Hooft anomaly</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.19101">https://arxiv.org/abs/2410.19101</a></span> Bell’s inequality in relativistic Quantum Field Theory *****</p>
+<p class="p2"><br></p>
+<p class="p1">20241029</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21268">https://arxiv.org/abs/2410.21268</a></span> Pseudochaotic Many-Body Dynamics as a Pseudorandom State Generator ***** (Wonjun Lee, Hyukjoon Kwon, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.20065">https://arxiv.org/abs/2410.20065</a></span> Dynamic Kohn anomaly in twisted bilayer graphene (Wei Chen)</p>
+<p class="p2"><br></p>
+<p class="p1">20241030</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21388">https://arxiv.org/abs/2410.21388</a></span> Low-energy edge signatures of the Kitaev spin liquid</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21363">https://arxiv.org/abs/2410.21363</a></span> Superconducting Berry Curvature Dipole</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21515">https://arxiv.org/abs/2410.21515</a></span> Cavity spectroscopy for strongly correlated systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21386">https://arxiv.org/abs/2410.21386</a></span> Supersymmetry dynamics on Rydberg atom arrays *** (Hong Yao)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.22032">https://arxiv.org/abs/2410.22032</a></span> From spin squeezing to fast state discrimination</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21402">https://arxiv.org/abs/2410.21402</a></span> Stabilizing Non-Abelian Topological Order against Heralded Noise via Local Lindbladian Dynamics ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21389">https://arxiv.org/abs/2410.21389</a></span> Microscopic Roadmap to a Yao-Lee Spin-Orbital Liquid **** (Derek Churchill, Emily Z. Zhang, Hae-Young Kee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.21378">https://arxiv.org/abs/2410.21378</a></span> What is the Geometry of Effective Field Theories? ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.22166">https://arxiv.org/abs/2410.22166</a></span> Mean-field theory for self-interacting relativistic Luttinger fermions ***</p>
+<p class="p2"><br></p>
+<p class="p1">20241031</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.22572">https://arxiv.org/abs/2410.22572</a></span> Coulomb interactions in systems of generalized semi-Dirac fermions ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.22843">https://arxiv.org/abs/2410.22843</a></span> Manifestations of (2 + 1)d chiral anomaly in a graphene plate</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.22696">https://arxiv.org/abs/2410.22696</a></span> Exact renormalization group flow for matrix product density operators</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.23152">https://arxiv.org/abs/2410.23152</a></span> When can classical neural networks represent quantum states? (John Preskill)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.22990">https://arxiv.org/abs/2410.22990</a></span> Generalized many-body perturbation theory for the electron correlation energy</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.23286">https://arxiv.org/abs/2410.23286</a></span> Proof of nonintegrability of the spin-1 bilinear-biquadratic chain model (HaRu K. Park, SungBin Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.17747">https://arxiv.org/abs/2410.17747</a></span> Transition from Antiferromagnetism to Altermagnetism: Symmetry-Breaking Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.22988">https://arxiv.org/abs/2410.22988</a></span> Classical eikonal from Magnus expansion (Joon-Hwi Kim, Jung-Wook Kim, Sungsoo Kim, Sangmin Lee)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
